cmake_minimum_required(VERSION 3.9)
project(final_project)

set(CMAKE_CXX_STANDARD 11)

add_executable(final_project main.cpp Game.cpp Game.hpp Octopus.cpp Octopus.hpp Space.cpp Space.hpp Den.cpp Den.hpp Neighborhood.cpp Neighborhood.hpp DeepSea.cpp DeepSea.hpp Menu.cpp Menu.hpp KelpForest.cpp KelpForest.hpp CoralReef.cpp CoralReef.hpp DesolateCliffs.cpp DesolateCliffs.hpp SeaGrass.cpp SeaGrass.hpp Constants.hpp)